# resume

./: .travis.yml  .~lock.CV.odt#  .~lock.test.fodt#  CV.docx  CV.fodt  CV.odt  Justfile  Makefile  README.md  data.yml  deploy_resume.sh  empty.fodg  empty.fodt  index.html  layout.fodt  resume.asciidoc  resume.fodt  resume.json  resume.odt  resume.yaml  sensitive.yml  test.fodt
opendocument/: .~lock.test.fodt#  .~lock.test_document_write.fodt#  README.md  pyproject.toml  test.fodt  testcontextvar.py
opendocument/src/radium226/opendocument/: __init__.py  block.py  body.py  content.py  document.py  document_type.py  embed_image_callable.py  paragraph.py  span.py  storage_type.py  styles.py
opendocument/src/radium226/opendocument/xml/: append_children_to_parent_element.py  create_element.py  namespaces_by_prefix.py  set_attribute_to_element.py
opendocument/tata/: .~lock.test_document_write.fodt#
opendocument/tests/: fixtures.py  test_opendocument.py
resume-generator/: README.md  pyproject.toml
resume-generator/src/radium226/resume_generator/: .~lock.model.odt#  .~lock.model2.odt#  __init__.py  app.py  append_child_nodes_to_parent_element.py  empty.fodt  model.fodt  model.odt  model2.odt  models.py  odt_file.py  oldmodels.py  oldparsers.py  oldrenderers.py  open_document.py  package_to_text_document.py  parser.py  parsers.py  renderer.py  renderers.py  xml.py
resume-generator/src/radium226/resume_generator/app/: app.py  generate.py  parse.py
resume-generator/src/radium226/resume_generator/models/: __init__.py  company.py  contact.py  context.py  job.py  medium.py  position.py  profile.py  publication.py  resume.py  role.py  skill.py  tool.py
resume-generator/tests/: test_renderers.py
resume-generator/tests/data/: empty.odt  meta.xml  settings.xml
resume-generator/tests/radium226/models/: headless.py  test_append_child_nodes_to_parent_element.py  test_headless.py  test_paragraph.py  test_renderer.py  test_renderers.py  test_task.py
(+170 files in other folders)
